# daemon_rs

./: Cargo.toml  LICENSE  QUICKSTART.md  README.md
benches/: throughput.rs
examples/: ai_agent_client.rs  client.rs  default_schema.json  load_test.rs
src/: ai_api.rs  config.rs  lib.rs  main.rs  metrics.rs  otel.rs  query.rs  schema.rs  server.rs  storage.rs  trace_storage.rs
